syntax = "proto3";
package enci.oracle.v1beta1;

option go_package = "github.com/encichain/enci/x/oracle/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

// Params represents the parameters for the module.
message Params {
  uint64 prevote_period = 1 [(gogoproto.moretags) = "yaml:\"prevote_period\""];
  uint64 vote_period = 2 [(gogoproto.moretags) = "yaml:\"vote_period\""];
  string vote_threshold = 3 [
    (gogoproto.moretags)   = "yaml:\"vote_threshold\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  uint64 vote_frequency = 4 [(gogoproto.moretags) = "yaml:\"vote_frequency\""];  // represents the number of blocks between each voting period
  bool oracle_enabled = 5;  // disables oracle when false
}
